Fixed link spacings

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -57,7 +57,6 @@ a {
   text-decoration: underline;
   color: $accent-color;
   font-family: $font-book;
-  display: inline-block;
 }
 ul {
   list-style: none;
@@ -149,7 +148,6 @@ sup{
 }
 
 .link-icon {
-  text-decoration: none !important;
   display: inline-block;
 }
 
